refactor: jdk版本 17 => 11，笔记更新